# MultigridPoissonSolver

./: README.md
MatlabPostprocess/: plot_ccode_result.m
Source/: CMakeLists.txt  finiteDifference.cpp  finiteDifference.hpp  mathFunctions.cpp  mathFunctions.hpp  testPoissonSolver.cpp  testPoissonSolver.hpp
